--- a/admin-dashboard/src/Styles/TechniciansAssign.module.scss
+++ b/admin-dashboard/src/Styles/TechniciansAssign.module.scss
@@ -1,19 +1,22 @@
 .container {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 95%;
-  height: 90%;
-  border-radius: 20px;
-  background-color: rgb(232, 233, 239);
-  box-shadow: 0px 6px 35px -7px rgba(0, 0, 0, 0.1);
+  // position: fixed;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // width: 95%;
+  // height: 90%;
+  // border-radius: 20px;
+  // background-color: rgb(232, 233, 239);
+  // box-shadow: 0px 6px 35px -7px rgba(0, 0, 0, 0.1);
 
   .component_container {
+    position: fixed;
+    top: 50%;
+    transform: translate(0, -50%);
     margin-left: 220px;
     margin-top: 0;
     height: 100%;
-    width: 95% -220px;
+    width: calc(100% - 220px);
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     // background-color: aqua;
