--- a/admin-dashboard/src/Styles/UserCard.module.scss
+++ b/admin-dashboard/src/Styles/UserCard.module.scss
@@ -25,7 +25,7 @@
     justify-items: center;
     align-items: center;
     img {
-      margin-left: 0.5rem;
+      margin-left: 0;
       border-radius: 100%;
       height: 2.3rem;
     }
