--- a/admin-dashboard/src/Styles/Calender.module.scss
+++ b/admin-dashboard/src/Styles/Calender.module.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   height: auto;
   background-color: white;
-  margin-left: 5em;
+  margin-left: 8%;
   margin-top: 4em;
   border-radius: 1em;
   box-shadow: 0px 6px 25px -7px rgba(0, 0, 0, 0.1);
@@ -33,8 +33,9 @@
 
       .calender_header_1 {
         user-select: none;
-        font-weight: 600;
-        font-size: 0.8rem;
+        font-weight: 800;
+        font-size: 1.3rem;
+        margin-left: 0.5em; 
       }
 
       .calender_header_2 {
